tests/toylang/neg/001643_mutation.toylang
program a = { while a do then sleep; } .
